finished top-wall

--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -158,7 +158,7 @@
 </div>
 
 <div id="map-section">
-    <ngui-map [options]="_mMapOptions" disableDefaultUI="true" zoom="13" styles="{{_mMapStyles}}" center="12.937700, 77.632453">
+    <ngui-map [options]="_mMapOptions" disableDefaultUI="true" zoom="13" center="12.937700, 77.632453">
         <marker position="12.937700, 77.632453">
         </marker>
     </ngui-map>
