--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,33 +1,7 @@
 <div class="np-color-white">
 
 
-    <div class="top-wall">
-        <div class="np-container-large">
-            <div class="np-flex-wrapper wall-frame">
-                <div class="wall-tag np-flex-wrapper np-flex-column">
-                    <mdl-layout-spacer></mdl-layout-spacer>
-                    <div class="wall-tag-inner">
-                        <span class="wall-text"><h4 class="np-font-comfortaa">Draw, Design, Develop</h4></span>
-                    </div>
-                </div>
-
-                <div class="wall-info">
-                    <div class="wall-info-inner np-flex-wrapper np-flex-column np-text-color-white">
-                        <span class="wall-text np-margin-bottom-12"><h6>Expertise In</h6></span>
-                        <span class="wall-text np-margin-bottom-8"><p>Android</p></span>
-                        <span class="wall-text np-margin-bottom-8"><p>Web</p></span>
-                        <span class="wall-text np-margin-bottom-8"><p>clouds</p></span>
-                        <mdl-layout-spacer></mdl-layout-spacer>
-                        <span class="wall-text">
-                        <button class="btn-dawnload-portfolio np-text-color-white" mdl-button mdl-ripple>download Portfolio</button>
-                    </span>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
+   <top-wall-view></top-wall-view>
     <div class="service">
         <div class="title">
             <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Services</span></h6>
