--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,15 +2,15 @@
 
 @import "~@angular-mdl/core/scss/color-definitions";
 
-$color-primary: 39,186,190;
+$color-primary: 27,120,234;
 //$color-primary: $palette-grey-50;
-$color-primary-dark: 31,148,152;
+$color-primary-dark: 21,96,187;
 $color-accent: $palette-blue-700;
 $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
 
-$np-color-primary-light: #a8e3e5;
-$np-color-primary-50: #e9f8f8 !default;
+$np-color-primary-light: #a3c9f6;
+$np-color-primary-50: #e8f1fc !default;
 $np-color-back-grey:  unquote("rgb(#{$palette-grey-50})");
 $np-color-back-grey-dark: unquote("rgb(#{$palette-grey-700})");
 $np-color-back-grey-dark-extra: unquote("rgb(#{$palette-grey-800})");
@@ -24,10 +24,12 @@ $np-color-back-grey-dark-extra: unquote("rgb(#{$palette-grey-800})");
 @import 'app/theme/theme';
 
 @import 'app/theme/mdl-fix';
+@import 'app/theme/portfolio';
  
 //cyan
 //primary: 39,186,190
 //priamry-dark: 31,148,152
+//primary-light: #a8e3e5
 //priamry-50 #e9f8f8
 
 //red
@@ -44,3 +46,9 @@ $np-color-back-grey-dark-extra: unquote("rgb(#{$palette-grey-800})");
 //95,38,137
 //76,30,109
 //#efe9f3
+
+//blue
+//#1B78EA //27,120,234
+//#1560bb //21,96,187
+//#a3c9f6
+//#e8f1fc
