changed top wall

--- a/src/app/ui/test/test.component.html
+++ b/src/app/ui/test/test.component.html
@@ -1,5 +1,14 @@
-<div class="np-color-white">
+<div class="np-layout-content">
+<div class="np-layout-container">
+    <div class="technology-block np-text-color-default np-shadow-card np-display-table">
+        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+        <div class="technology-logo-container np-display-table-cell"><img class="technology-logo" src="assets/img/angular.png"> </div>
+        <div class="technology-info np-display-table-cell">
+            <h6 class="np-font-comfortaa np-text-color-dark">
+            <!--span class="np-font-light">I'm </span-->techAndroid.name</h6>
+        <p class="np-font-open-sans">techAndroid.detail</p>
+        </div>
+    </div>
 
-
-
+</div>
 </div>
