--- a/src/app/theme/portfolio.scss
+++ b/src/app/theme/portfolio.scss
@@ -3,7 +3,8 @@
 @media screen and (min-width:660px){
 
     .init-top-wall{
-        background-image: linear-gradient(to right, rgba(0,0,0,0.05) 20%, $np-color-primary 20%, $np-color-primary 60%,  transparent 60%);
+        //background-image: linear-gradient(to right, rgba(0,0,0,0.2) 20%, $np-color-primary 20%, $np-color-primary 60%,  transparent 60%);
+        background-color: rgba(0,0,0,.25);
         
     }
 }
