--- a/src/app/ui/home/top-wall.component.html
+++ b/src/app/ui/home/top-wall.component.html
@@ -1,22 +1,23 @@
- <div class="top-wall">
+<div class="top-wall-image">
+     <div class="top-wall">
         <div class="np-container-large">
             <div class="np-flex-wrapper wall-frame">
                 <div class="wall-tag np-flex-wrapper np-flex-column">
                     <mdl-layout-spacer></mdl-layout-spacer>
                     <div class="wall-tag-inner">
-                        <span class="wall-text"><h4 class="np-font-comfortaa">Draw, Design, Develop</h4></span>
+                        <span class="wall-text"><h4 class="np-font-comfortaa np-text-color-white">Draw, Design, Develop</h4></span>
                     </div>
                 </div>
 
                 <div class="wall-info">
-                    <div class="wall-info-inner np-flex-wrapper np-flex-column np-text-color-white">
-                        <span class="wall-text np-margin-bottom-12"><h6>Expertise In</h6></span>
+                    <div class="wall-info-inner np-flex-wrapper np-flex-column np-text-color-primary-50 np-font-open-sans">
+                        <span class="wall-text np-margin-bottom-12"><h6 class="np-font-open-sans np-text-color-white">Expertise In</h6></span>
                         <span class="wall-text np-margin-bottom-8"><p>Android</p></span>
                         <span class="wall-text np-margin-bottom-8"><p>Web</p></span>
                         <span class="wall-text np-margin-bottom-8"><p>clouds</p></span>
                         <mdl-layout-spacer></mdl-layout-spacer>
-                        <span class="wall-text">
-                        <button class="btn-dawnload-portfolio np-text-color-white np-font-12" mdl-button mdl-ripple>download Portfolio</button>
+                        <span class="wall-text np-margin-top-12">
+                        <button class="btn-dawnload-portfolio np-text-color-white np-font-12 np-font-comfortaa" mdl-button mdl-ripple>Download Portfolio</button>
                     </span>
                     </div>
                 </div>
@@ -24,4 +25,5 @@
             </div>
 
         </div>
+    </div>
     </div>
