--- a/src/app/ui/home/top-wall.component.scss
+++ b/src/app/ui/home/top-wall.component.scss
@@ -4,7 +4,7 @@
           line-height: 1.3;
     }
     h4{
-          font-size: 20px;
+          font-size: 28px;
       }   
       h6{
           font-size: 16px;
@@ -23,11 +23,14 @@
 @media screen and (min-width:1024px){
   .top-wall{
     padding: 64px 0px 0px 0;
+
+
+    
     .wall-info-inner{
-      padding: 72px;
+      padding: 100px 88px 112px 88px;
     }
     .wall-tag-inner{
-       padding: 72px 0;
+       padding: 100px 0 112px 0px;
     }
   }
 
@@ -36,13 +39,15 @@
 
 @media screen and (max-width:1024px){
   .top-wall{
-     padding: 56px 0px 0px 0;
-
+    padding: 56px 0px 0px 0;
+    h4{
+          font-size: 20px;
+      }
       .wall-tag-inner{
-                padding: 32px;
+                padding: 40px;
             }
         .wall-info-inner{
-            padding: 32px;
+            padding: 40px;
         }
   }
 
@@ -53,7 +58,7 @@
 
     .init-top-wall{
        background-size: 250% 100%;
-        animation: animatedBackground 2.4s ease both 0.1s;
+        //animation: animatedBackground 2.4s ease both 0.1s;
             .wall-text{
                 animation-name: fadeInUpY;
                 animation-delay: 2.5s;
@@ -61,6 +66,11 @@
                 animation-fill-mode: both;
             }
         
+    }
+
+    .top-wall-image{ 
+        background: #a0a0a0 url('../../../assets/img/protfolio_wall2-01.png') center center no-repeat;
+  background-size: cover;
     }
 
     .top-wall{
@@ -155,6 +165,7 @@
 
 .btn-dawnload-portfolio{
     border-left: 1px solid white;
+    text-transform: none;
     background: rgba(0, 0, 0, 0.05)
 
 }
