--- a/src/app/theme/sass/anim/hover.scss
+++ b/src/app/theme/sass/anim/hover.scss
@@ -32,3 +32,17 @@
         color:$np-color-primary-50;
     }
 }
+.np-hover-text-color-to-primary{
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    &:hover{
+        color:$np-color-primary;
+    }
+}
+
+
+.np-active-down{
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    &:active{
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    }
+}
