--- a/src/app/ui/home/technology.component.scss
+++ b/src/app/ui/home/technology.component.scss
@@ -23,53 +23,45 @@
     }
 
     .technology-list-item{
-        text-align: center;
     }
-    .technology-block{
-        text-align: center;
-        max-width: 192px;
-        margin: 4px auto;
 
+    .technology-block{
+        max-width: 212px;
+        min-width: 212px;
+        margin: 20px auto;
+        min-height: 100px;
+
+         border-radius: 4px;
 
         .technology-logo-container{
-            height: 56px;
-            display: flex;
-            align-items: center;
-            padding: 6px;
+            width: 72px;
+            min-width: 72px;
+           
+            vertical-align: middle;
+            text-align: center;
         }
         .technology-logo {
-        display: block;
-        max-height: 48px;
-        margin: 0 auto;
-            min-width: 10%;
-            border-radius: 28px;
+            max-width: 40px;     
+        }
+        .technology-info{
+            height: 100%;
+             vertical-align: middle;
         }
            
-        .socialicon{
-            margin: 20px 0 18px 0;
-            font-size: 24px;
-        }
-
-        button{
-            margin: 8px 0 16px 0;
-        }
-
-
-        mdl-icon{            
-            font-size: 14px;
-        }
         
-
         h6{
             font-size: 12px;
-            margin: 0 10px 4px;
+            margin: 20px 20px 4px 0px;
             line-height: 1.2;
+            
+            
         }
 
         p{
           line-height: 1.3;
-            margin: 0 10px 0;
-            font-size:12px;
+            margin: 0 20px 20px 0px;
+            font-size:10px;
+            
         }
 
        /* &:hover{
@@ -80,6 +72,7 @@
         }*/
 
     }
+    
 
 }
 
