--- a/src/app/ui/test/test.component.html
+++ b/src/app/ui/test/test.component.html
@@ -1,14 +1,23 @@
 <div class="np-layout-content">
-<div class="np-layout-container">
-    <div class="technology-block np-text-color-default np-shadow-card np-display-table">
-        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-        <div class="technology-logo-container np-display-table-cell"><img class="technology-logo" src="assets/img/angular.png"> </div>
-        <div class="technology-info np-display-table-cell">
-            <h6 class="np-font-comfortaa np-text-color-dark">
-            <!--span class="np-font-light">I'm </span-->techAndroid.name</h6>
-        <p class="np-font-open-sans">techAndroid.detail</p>
+    <div class="np-layout-container">
+        <div class="technology-block np-hover-text-color-to-primary np-text-color-dark np-hover-up np-cursor np-active-down np-shadow-card np-display-table">
+            <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+            <div class="technology-logo-container np-display-table-cell"><img class="technology-logo" src="assets/img/angular.png"> </div>
+            <div class="technology-info np-display-table-cell">
+                <h6 class="np-font-comfortaa  np-font-bolder">
+                    <!--span class="np-font-light">I'm </span-->Tech Android</h6>
+                <p class="np-font-open-sans np-text-color-default">span class np-font -light On Dmand slass np-font- light On </p>
+                
+            </div>
         </div>
-    </div>
+        <div class="technology-block np-text-color-default">
+                <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                <div class="technology-logo-container"><img class="technology-logo" src="{{techAndroid.logo}}"> </div>
+                <h6 class="np-font-comfortaa np-text-color-dark">
+                  <!--span class="np-font-light">I'm </span-->{{techAndroid.name}}</h6>
+                <p class="np-font-open-sans">{{techAndroid.detail}} </p>
+                <button mdl-button mdl-button-type="icon" mdl-colored="primary" (click)="onClickOpenlink(techAndroid.link)"><mdl-icon>trending_flat</mdl-icon></button>
+              </div>
 
-</div>
+    </div>
 </div>
