--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -10,7 +10,7 @@
             <div class="mdl-grid">
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary np-hover-up">
+                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary">
                         <div class="service-logo np-margin-bottom-16"><i class="icon-mobile socialicon np-text-color-primary np-font-24 np-text-shadow"></i></div>
                         <h6 class="np-font-comfortaa np-font-bold np-font-12 np-text-color-grey-dark-extra">Android App Development</h6>
                         <p class="np-font-open-sans np-font-bold">Hybrid/Native App, Backward Support upto v4.1</p>
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary np-hover-up">
+                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary">
                         <div class="service-logo np-margin-bottom-16"><i class="icon-code socialicon np-text-color-primary np-font-24 np-text-shadow"></i></div>
                         <h6 class="np-font-comfortaa np-font-bold np-font-12 np-text-color-grey-dark-extra">Web Development</h6>
                         <p class="np-font-open-sans np-font-bold">Responsive Web Design, Multi-platform Support</p>
@@ -29,7 +29,7 @@
 
 
                 <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
-                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary np-hover-up">
+                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary">
                         <div class="service-logo np-margin-bottom-16"><i class="icon-server socialicon np-text-color-primary np-font-24 np-text-shadow"></i></div>
                         <h6 class="np-font-comfortaa np-font-bold np-font-12 np-text-color-grey-dark-extra">Backend Development</h6>
                         <p class="np-font-open-sans np-font-bold">Web Servers, Databases, APIs and services</p>
