about dimens changes

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,6 +1,12 @@
-<div class="np-color-grey">
-    <div class="np-layout-content">
-        <div class="about-card np-shadow-card np-container-large np-margin-bottom-12 np-color-white">
+<div class="np-color-white">
+    
+    <div class="np-layout-content about">
+
+        <div class="np-container-large np-margin-top-24">
+            <np-project-view></np-project-view>
+        </div>
+
+        <div class="about-card np-shadow-card np-container-large np-margin-bottom-20 np-color-white">
             <div class="about-card-content mdl-grid">
                 <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-cell--2-col">
                     <!--div class="about-avatar np-flex-container">
@@ -68,12 +74,7 @@
             </div>
         </div>
     </div>
-    <div class="np-layout-content">
-
-        <div class="np-container-large">
-            <np-project-view></np-project-view>
-        </div>
-    </div>
+    
 
 
 </div>
