--- a/src/app/ui/home/technology.component.html
+++ b/src/app/ui/home/technology.component.html
@@ -14,7 +14,7 @@
           <div class="mdl-grid">
 
             <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" *ngFor="let techAndroid of _mTechAndroidList; let i = index">
-              <div (click)="onClickOpenlink(techAndroid.link)" class="technology-block np-hover-text-color-to-primary np-text-color-dark np-hover-up np-cursor np-active-down np-shadow-card np-display-table">
+              <div (click)="onClickOpenlink(techAndroid.link)" class="technology-block np-hover-text-color-to-primary np-text-color-dark np-hover-card-up np-cursor np-active-down  np-display-table">
                 <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
                 <div class="technology-logo-container np-display-table-cell"><img class="technology-logo" src="{{techAndroid.logo}}"> </div>
                 <div class="technology-info np-display-table-cell">
@@ -39,7 +39,7 @@
           <div class="mdl-grid">
 
             <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" *ngFor="let techWeb of _mTechWebList; let i = index">
-              <div (click)="onClickOpenlink(techWeb.link)" class="technology-block np-hover-text-color-to-primary np-text-color-dark np-hover-up np-cursor np-active-down np-shadow-card np-display-table">
+              <div (click)="onClickOpenlink(techWeb.link)" class="technology-block np-hover-text-color-to-primary np-text-color-dark np-hover-card-up np-cursor np-active-down np-display-table">
                 <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
                 <div class="technology-logo-container np-display-table-cell"><img class="technology-logo" src="{{techWeb.logo}}"> </div>
                 <div class="technology-info np-display-table-cell">
@@ -63,7 +63,7 @@
           <div class="mdl-grid">
 
             <div class="technology-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" *ngFor="let techBack of _mTechBackendList; let i = index">
-             <div (click)="onClickOpenlink(techBack.link)" class="technology-block np-hover-text-color-to-primary np-text-color-dark np-hover-up np-cursor np-active-down np-shadow-card np-display-table">
+             <div (click)="onClickOpenlink(techBack.link)" class="technology-block np-hover-text-color-to-primary np-text-color-dark np-hover-card-up np-cursor np-active-down np-display-table">
                 <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
                 <div class="technology-logo-container np-display-table-cell"><img class="technology-logo" src="{{techBack.logo}}"> </div>
                 <div class="technology-info np-display-table-cell">
