--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -63,6 +63,17 @@
   margin-top: 12px;
 }
 
+.np-margin-top-20{
+  margin-top: 20px;
+
+} 
+.np-margin-top-24{
+  margin-top: 24px;
+}
+
+.np-margin-top-28{
+  margin-top: 28px;
+}
 .np-margin-top-32{
   margin-top: 32px;
 }
