--- a/src/app/ui/about/about.component.scss
+++ b/src/app/ui/about/about.component.scss
@@ -1,5 +1,5 @@
 
-
+.about{
 .about-card{
     padding: 0;
     width: 100%;
@@ -87,38 +87,42 @@
     }
 
 }
+}
 
 
 @media screen and (max-width: 839px) and (min-width: 480px){
-    .about-card{
-        .info-items{
+    .about{  
+        .about-card{
+            .info-items{
 
-            border-left: 1px solid #e2e2e2;
-            padding: 0 16px;
-            
-            p{
-                font-size: 12px;
-                margin: 0;
-                line-height: 1.3;
+                border-left: 1px solid #e2e2e2;
+                padding: 0 16px;
+                
+                p{
+                    font-size: 12px;
+                    margin: 0;
+                    line-height: 1.3;
+                }
+
             }
-
         }
     }
 }
 @media screen and (min-width: 839px) {
+    .about{
+        .about-card{
+            .info-items{
+                
+                border-left: 1px solid #e2e2e2;
+                padding: 0 16px;
+                
+                p{
+                    font-size: 12px;
+                    margin: 0;
+                    line-height: 1.3;
+                }
 
-    .about-card{
-        .info-items{
-            
-            border-left: 1px solid #e2e2e2;
-            padding: 0 16px;
-            
-            p{
-                font-size: 12px;
-                margin: 0;
-                line-height: 1.3;
             }
-
         }
     }
 
