--- a/src/app/ui/test2/test2.component.html
+++ b/src/app/ui/test2/test2.component.html
@@ -4,6 +4,10 @@
             <div class="card np-shadow-card">
              <button class="btn" mdl-ripple mdl-button  mdl-button-type="mini-fab"  mdl-colored="primary" >
                  <mdl-icon class="np-font-14">send</mdl-icon></button>
+                 <div class="expanded-button">
+                      <button  mdl-ripple mdl-button  mdl-button-type="fab"  mdl-colored="primary" >
+                 </button>
+                 </div>
 
             </div>
 
