--- a/src/app/ui/about/about.component.scss
+++ b/src/app/ui/about/about.component.scss
@@ -16,13 +16,15 @@
             max-width: 104px;
             height: auto;
             border-radius: 100%;
-                box-shadow: 0 1px 3px 0px rgba(0,0,0,0.1);
+            box-shadow: 0 1px 3px 0px rgba(0,0,0,0.1);
             transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+            filter: grayscale(1);
 
             &:hover{
                 box-shadow: 0px 4px 8px 1px rgba(0,0,0,0.14);
                 border-radius: 4px;
                 transform: scale(1.1);
+                filter: grayscale(0.2);
             }
         }
     }
