added social links

--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -13,7 +13,7 @@
                     <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary">
                         <div class="service-logo np-margin-bottom-16"><i class="icon-mobile socialicon np-text-color-primary np-font-24 np-text-shadow"></i></div>
                         <h6 class="np-font-comfortaa np-font-bold np-font-12 np-text-color-grey-dark-extra">Android App Development</h6>
-                        <p class="np-font-open-sans np-font-bold">Hybrid/Native App, Backward Support upto v4.1</p>
+                        <p class="np-font-open-sans np-font-bold">Hybrid/Native App,IoT based Apps, Backward Support upto v4.1</p>
                         <!--button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button-->
                     </div>
                 </div>
