--- a/src/app/ui/home/top-wall.component.html
+++ b/src/app/ui/home/top-wall.component.html
@@ -12,9 +12,9 @@
                 <div class="wall-info">
                     <div class="wall-info-inner np-flex-wrapper np-flex-column np-text-color-primary-50 np-font-open-sans">
                         <span class="wall-text np-margin-bottom-12"><h6 class="np-font-open-sans np-text-color-white">Expertise In</h6></span>
-                        <span class="wall-text np-margin-bottom-8"><p>Android</p></span>
-                        <span class="wall-text np-margin-bottom-8"><p>Web</p></span>
-                        <span class="wall-text np-margin-bottom-8"><p>clouds</p></span>
+                        <span class="wall-text np-margin-bottom-8"><p>Design</p></span>
+                        <span class="wall-text np-margin-bottom-8"><p>Android / Web</p></span>
+                        <span class="wall-text np-margin-bottom-8"><p>Back-end</p></span>
                         <mdl-layout-spacer></mdl-layout-spacer>
                         <span class="wall-text np-margin-top-12">
                         <button class="btn-dawnload-portfolio np-text-color-white np-font-12 np-font-comfortaa" mdl-button mdl-ripple>Download Portfolio</button>
