--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -80,40 +80,36 @@
                     <div class="heading np-margin-bottom-12 np-padding-left-16">
                         <h4 class="np-font-comfortaa np-font-14 np-font-light">Send me a message</h4>
                     </div>
-                       <form [formGroup]="_mFormGroup">
-                    <div class="mdl-grid">
-                        <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                            <mdl-textfield disableNativeValidityChecking type="text" label="Name..." formControlName="name"
-                              error-msg="Input is not a name!" [(ngModel)]="text4"
-                                floating-label></mdl-textfield>
-                        </div>
-                        <!--div class="mdl-cell mdl-cell--6-col">
+                    <form [formGroup]="_mFormGroup">
+                        <div class="mdl-grid">
+                            <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                                <mdl-textfield disableNativeValidityChecking type="text" label="Name..." formControlName="name" error-msg="Input is not a name!"
+                                    [(ngModel)]="text4" floating-label></mdl-textfield>
+                            </div>
+                            <!--div class="mdl-cell mdl-cell--6-col">
                             <mdl-textfield type="text" label="Mobile (optional)..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not a number!"
                                 [(ngModel)]="text4" floating-label></mdl-textfield>
                         </div-->
-                        <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                             <mdl-textfield 
-            [class.is-invalid]="email.invalid && email.value" 
-            disableNativeValidityChecking type="text" label="Email..." formControlName="email" [error-msg]="'Input is not an Email!'" 
-                        floating-label></mdl-textfield>
-                        </div>
+                            <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                                <mdl-textfield [class.is-invalid]="email.invalid && email.value" disableNativeValidityChecking type="text" label="Email..."
+                                    formControlName="email" [error-msg]="'Input is not an Email!'" floating-label></mdl-textfield>
+                            </div>
 
-                        <!--div class="mdl-cell mdl-cell--6-col">
+                            <!--div class="mdl-cell mdl-cell--6-col">
                             <mdl-textfield type="text" label="Company Name..." pattern="-?[0-9]*(\.[0-9]+)?" error-msg="Input is not an Email!" [(ngModel)]="text4"
                                 floating-label></mdl-textfield>
                         </div-->
-                        <div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
-                            <mdl-textfield 
-            disableNativeValidityChecking label="Message..." formControlName="message"  rows="3" maxrows="3" floating-label></mdl-textfield>
+                            <div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+                                <mdl-textfield disableNativeValidityChecking label="Message..." formControlName="message" rows="3" maxrows="3" floating-label></mdl-textfield>
+                            </div>
                         </div>
-                    </div>
-                    <mdl-layout-spacer></mdl-layout-spacer>
-                    <div class="contact-form-submit  np-flex-row np-flex-wrapper np-padding-left-16">
-                        <h4 class="np-font-comfortaa np-font-14 np-font-light np-align-vertical-middle">(We will connect back in 1 working day.)</h4>
                         <mdl-layout-spacer></mdl-layout-spacer>
-                        <button mdl-button (click)="onSubmit()" mdl-button-type="mini-fab" type="submit" class="btn btn-success" 
-                        mdl-colored="primary" [disabled]="!_mFormGroup.valid"><mdl-icon class="np-font-14">send</mdl-icon></button>
-                    </div>
+                        <div class="contact-form-submit  np-flex-row np-flex-wrapper np-padding-left-16">
+                            <h4 class="np-font-comfortaa np-font-14 np-font-light np-align-vertical-middle">(We will connect back in 1 working day.)</h4>
+                            <mdl-layout-spacer></mdl-layout-spacer>
+                            <button mdl-button (click)="onSubmit()" mdl-button-type="mini-fab" type="submit" class="btn btn-success" mdl-colored="primary"
+                                [disabled]="!_mFormGroup.valid"><mdl-icon class="np-font-14">send</mdl-icon></button>
+                        </div>
                     </form>
                 </div>
 
@@ -145,16 +141,14 @@
                         <h4 class="np-font-comfortaa np-font-14 np-font-light np-padding-left-16">Find me on</h4>
                         <ul class="social">
                             <li>
-                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-github-circled socialicon"></i></button>
+                                <button (click)="onClickOpenlink(_mSocialLink.github)" mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-github-circled socialicon"></i></button>
+                            </li>
+
+                            <li>
+                                <button (click)="onClickOpenlink(_mSocialLink.linkedIn)" mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-linkedin socialicon"></i></button>
                             </li>
                             <li>
-                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-bitbucket socialicon"></i></button>
-                            </li>
-                            <li>
-                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-linkedin socialicon"></i></button>
-                            </li>
-                            <li>
-                                <button mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-instagram socialicon"></i></button>
+                                <button (click)="onClickOpenlink(_mSocialLink.instagram)" mdl-button mdl-button-type="icon" class="np-selector-text-primary-light-to-white"><i class="icon-instagram socialicon"></i></button>
                             </li>
                         </ul>
                     </div>
