--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -20,22 +20,17 @@
         <div class="footer-right-section">
             <ul class="social">
                 <li>
-                    <button mdl-button mdl-button-type="icon">
+                    <button (click)="onClickOpenlink(_mSocialLink.github)" mdl-button mdl-button-type="icon">
                         <i class="icon-github-circled socialicon np-text-color-white"></i>
                     </button>
                 </li>
                 <li>
-                    <button mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon np-text-color-white"></i>
-                    </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
+                    <button (click)="onClickOpenlink(_mSocialLink.linkedIn)" mdl-button mdl-button-type="icon">
                         <i class="icon-linkedin socialicon np-text-color-white"></i>
                     </button>
                 </li>
                 <li>
-                    <button mdl-button mdl-button-type="icon">
+                    <button (click)="onClickOpenlink(_mSocialLink.instagram)" mdl-button mdl-button-type="icon">
                         <i class="icon-instagram socialicon np-text-color-white"></i>
                     </button>
                 </li>
