--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -27,9 +27,7 @@
                         <h6 class="np-text-color-primary np-font-open-sans np-font-12"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
                     </div>
                     <div class="about-detail">
-                        <p class="np-font-open-sans np-font-12 np-border-primary-left np-padding-8 mdl-color--grey-50 mdl-color-text--grey-500">I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
-                            with all stages of the development cycle for dynamic web projects.
-                        </p>
+                        <p class="np-font-open-sans np-font-12 np-border-primary-left np-padding-8 mdl-color--grey-50 mdl-color-text--grey-500">{{_mAboutMyself}}</p>
                     </div>
                 </div>
 
