updated portfolio details

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -63,10 +63,10 @@
                     </div-->
                         <div class="info-hobby np-flex-container">
                             <div class="tag">
-                                <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Hobbies:</p>
+                                <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Interests:</p>
                             </div>
                             <div class="value np-font-open-sans mdl-color-text--grey-500">
-                                <p>PC Gaming, Sketching</p>
+                                <p>Gaming, Sketching, Designing, Photo-Editing</p>
                             </div>
                         </div>
                     </div>
