--- a/src/app/ui/test/test.component.scss
+++ b/src/app/ui/test/test.component.scss
@@ -1,102 +1,79 @@
-
-    .technology-block{
-        max-width: 212px;
-        margin: 4px auto;
-        min-height: 64px;
-         border-radius: 4px;
-
-        .technology-logo-container{
-            width: 72px;
-            min-width: 72px;
-           
-            vertical-align: middle;
-            text-align: center;
-        }
-        .technology-logo {
-            max-width: 40px;     
-        }
-        .technology-info{
-            height: 100%;
-             vertical-align: middle;
-        }
-           
-        
-        h6{
-            font-size: 12px;
-            margin: 20px 20px 4px 0px;
-            line-height: 1.2;
-            
-            
-        }
-
-        p{
-          line-height: 1.3;
-            margin: 0 20px 20px 0px;
-            font-size:10px;
-            
-        }
-
-       /* &:hover{
-            background:rgba(255,255,255,1);
-            border-radius: 2px;
-            color: rgba(0,0,0,0.54);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-        }*/
-
-    }
-
-    .technology-block{
-        text-align: center;
-        max-width: 192px;
-        margin: 4px auto;
-
-
-        .technology-logo-container{
-            height: 56px;
-            display: flex;
-            align-items: center;
-            padding: 6px;
-        }
-        .technology-logo {
-        display: block;
-        max-height: 48px;
-        margin: 0 auto;
-            min-width: 10%;
-            border-radius: 28px;
-        }
-           
-        .socialicon{
-            margin: 20px 0 18px 0;
-            font-size: 24px;
-        }
-
-        button{
-            margin: 8px 0 16px 0;
-        }
-
-
-        mdl-icon{            
-            font-size: 14px;
-        }
-        
-
-        h6{
-            font-size: 12px;
-            margin: 0 10px 4px;
-            line-height: 1.2;
-        }
-
-        p{
-          line-height: 1.3;
-            margin: 0 10px 0;
-            font-size:12px;
-        }
-
-       /* &:hover{
-            background:rgba(255,255,255,1);
-            border-radius: 2px;
-            color: rgba(0,0,0,0.54);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-        }*/
-
-    }
+body {
+  margin: 0;
+}
+* {
+  box-sizing: border-box;
+}
+.pseudo-circle, .trigger {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  position: absolute;
+  right: 100px;
+  bottom: 10px;
+  z-index: 99998;
+  cursor: pointer;
+  transform-origin: 50% 50%; 
+}
+.pseudo-circle {
+  opacity: 0;
+  overflow: hidden;
+  transition: transform 0.3s cubic-bezier(0.0, 0.0, 0.2, 1), opacity 0.1s;
+}
+.trigger {
+  text-align: center;
+  color: #fff;
+  line-height: 56px;
+  background-color: #009688;
+  transition: transform 0.15s cubic-bezier(0.4, 0.0, 1, 1), opacity 0.1s 0.1s, box-shadow 0.3s;
+  opacity: 1;
+  right: 50px;
+  bottom: 50px;
+  position: fixed;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
+  z-index: 99999;
+}
+.pseudo-circle.open {
+  transition-delay: .15s;
+  transform: scale(45);
+  opacity: 1;
+}
+.trigger.open {
+  transform: translate(-50px, 40px);
+  opacity: 0;
+}
+.trigger.open i {
+  opacity: 0;
+}
+.trigger:hover {
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.12), 0 12px 12px rgba(0, 0, 0, 0.24);
+}
+.dialog {
+  width: 100vw;
+  height: 100vh;
+  background-color: #009688;
+}
+.toolbar {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  overflow: hidden;
+  padding: 20px;
+}
+.toolbar button {
+  position: absolute;
+  z-index: 999999;
+  border: 0;
+  background: transparent;
+  font-size: 16px;
+  text-transform: uppercase;
+  top: 50%;
+  color: #fff;
+  transform: translateY(-50%);
+  padding: 10px 20px;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: all 0.3s;
+  outline: none;
+}
