--- a/src/app/theme/portfolio.scss
+++ b/src/app/theme/portfolio.scss
@@ -4,7 +4,7 @@
 
     .init-top-wall{
         //background-image: linear-gradient(to right, rgba(0,0,0,0.2) 20%, $np-color-primary 20%, $np-color-primary 60%,  transparent 60%);
-        background-color: rgba(0,0,0,.25);
+        background-color: rgba(0,0,0,.3);
         
     }
 }
@@ -12,7 +12,8 @@
 @media screen and (max-width:660px){
 
     .init-top-wall{
+        background-color: rgba(0,0,0,.3);
         
-        background-image: linear-gradient(to right,$np-color-primary 50%, transparent 50%);
+       // background-image: linear-gradient(to right,$np-color-primary 50%, transparent 50%);
     }
 }
