--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -160,7 +160,8 @@
 
 <div id="map-section">
     <ngui-map [options]="_mMapOptions" disableDefaultUI="true" zoom="13" center="12.937700, 77.632453">
-        <marker position="12.937700, 77.632453">
-        </marker>
+        <custom-marker position="12.937700, 77.632453">
+            <img src="assets/img/map-marker.png" />
+        </custom-marker>
     </ngui-map>
 </div>
