added circular reveal

--- a/src/app/ui/test2/test2.component.html
+++ b/src/app/ui/test2/test2.component.html
@@ -1,17 +1,13 @@
+<div class="np-layout-content">
+    <div class="np-layout-container">
+        
+        
+            <div class="material np-hover-card-up">
 
-    <div class="np-layout-content">
-        <div class="np-layout-container">
-            <div class="card np-shadow-card">
-             <button class="btn" mdl-ripple mdl-button  mdl-button-type="mini-fab"  mdl-colored="primary" >
-                 <mdl-icon class="np-font-14">send</mdl-icon></button>
-                 <div class="expanded-button">
-                      <button  mdl-ripple mdl-button  mdl-button-type="fab"  mdl-colored="primary" >
-                 </button>
-                 </div>
+            <div class="background circle"></div>
 
-            </div>
-
+          
         </div>
-
+  
     </div>
-
+</div>
