--- a/src/app/ui/test2/test2.component.scss
+++ b/src/app/ui/test2/test2.component.scss
@@ -1,4 +1,5 @@
 
+
 .material {
   width: 300px;
   height: 300px;
@@ -16,7 +17,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%,-50%);
   width: 50px;
   height: 50px;
   transition: width 0.3s ease, height 0.3s ease, border-radius 0.4s ease, top 0.3s ease, left 0.3s ease;
@@ -30,9 +31,6 @@
 .material .circle:hover {
   width: 145%;
   height: 145%;
-  left: 50%;
-  top: -20%;
- 
 }
 
 
