send message change

--- a/src/app/ui/onepage/onepage.component.html
+++ b/src/app/ui/onepage/onepage.component.html
@@ -14,7 +14,7 @@
         </mdl-layout-header-row>
     </mdl-layout-header>
 
-      <mdl-layout-drawer class="np-drawer np-color-primary np-text-color-primary-light">
+      <mdl-layout-drawer class="np-drawer np-color-primary-dark np-text-color-primary-light">
         <header class="nav-header np-shadow-inner">
             <div class="mdl-layout-spacer"></div>
             <div class="nav-avatar-container">
