--- a/src/app/ui/test1/test1.component.html
+++ b/src/app/ui/test1/test1.component.html
@@ -2,11 +2,18 @@
     <div class="np-layout-container">
 
         <div class="np-shadow-card test-card">
+            <div class="fab-anim-container">
 
-            <div class="fab-anim-area">
-                <div class="fab" (click)="onClickBtn(_idBtnOpen)">
+                <div class="fab-below-area">
+ <div class="contact-fab" (click)="onClickBtn(_idBtnOpen)"><mdl-icon>add</mdl-icon>
+                    </div>
                 </div>
 
+                <div class="contact-fab-anim-area">
+                    <div class="contact-fab-anim" (click)="onClickBtn(_idBtnOpen)">
+                    </div>
+
+                </div>
             </div>
 
 
