--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -30,7 +30,7 @@ width: 100%;
 
 @media screen and (max-width: $resXS) {
   .np-layout-content {
-    padding: 8px 20px;
+    padding: 56px 20px 8px 20px;
   }
 }
 
