--- a/src/app/ui/contact/contact.component.scss
+++ b/src/app/ui/contact/contact.component.scss
@@ -19,12 +19,28 @@
 .contact{
 
     .contact-form{
-        .contact-form-submit{
-            padding:16px;
+        position: relative;
+        width: 100%;
+
+        .contact-form-container{
+            position: relative;
+            z-index: 1;
+
+            .contact-form-submit{
+                padding:16px;
+            }
+
+            .contact-field{
+                padding: 16px 16px 0 16px;
+            }
         }
 
-        .contact-field{
-            padding: 16px 16px 0 16px;
+        .contact-form-anim{
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            top: 0%;
         }
     }
 
@@ -81,8 +97,10 @@
         flex-flow: row nowrap;
         display: flex;
 
-        .contact-form{   
-            min-width: 300px;
+        .contact-form{
+            .contact-form-container{
+                min-width: 300px;
+            }   
         }
 
         .contact-me{
@@ -103,15 +121,61 @@
         }
 
         .contact-form{
-            flex-flow: row nowrap;
-            order: 1;
-            width: 100%;
+            .contact-form-container{
+                flex-flow: row nowrap;
+                order: 1;
+                width: 100%;
+            }
         }
     }
 }
 
 
+.contact-fab-anim{
+  position: absolute;
+  width: 64px;
+  bottom: 52px;
+  right: 52px;
+  opacity: 0;
+  
+    transform: translate(50%,50%);
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+  height: 64px;
+  
+  border-radius: 50%;
+  transition: transform 0.15s cubic-bezier(0.4, 0.0, 1, 1), opacity 0.1s 0.1s, box-shadow 0.3s,
+  bottom 0.3s ease, right 0.3s ease-in-out,  
+  width 0.3s ease 0.3s, height 0.3s ease 0.3s, border-radius  0.3s ease 0.3s;
+}
+.contact-fab-anim-open{
+    z-index: 2;
+    cursor: pointer;
+    bottom: 50%;
+    right: 50%;
+    transition: opacity 0.1 ease 0.3s;
+    opacity: 1; 
+    width: 3000px;
+    height: 3000px; 
+}
 
+.contact-fab-hide{
+    opacity:0;
+}
+
+.contact-message-reply{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity:0;
+    transform: translate(-50%, -50%);
+}
+
+.contact-message-reply-show{
+      opacity: 1;
+      cursor: pointer;
+      z-index: 3;
+      transition: opacity 0.3s 0.3s;
+}
 
 
 /*
