--- a/src/app/ui/test/test.component.scss
+++ b/src/app/ui/test/test.component.scss
@@ -1,79 +1,160 @@
-body {
-  margin: 0;
+.contact{
+
+    .contact-form{
+        position: relative;
+        width: 100%;
+        
+        .contact-form-container{
+        position: relative;
+        
+            z-index: 1;
+            .contact-form-submit{
+                padding:16px;
+            }
+
+            .contact-field{
+                padding: 16px 16px 0 16px;
+            }
+        }
+        .contact-form-anim{
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            top: 0%;
+        }
+        
+    }
+
+    .contact-me{
+        padding: 24px;
+        .heading{
+            h4{
+                margin: 0;
+            }
+        }
+        .info{
+            ul{
+                margin: 0;
+            }
+            ul>li{
+                min-height: 48px;
+                mdl-icon{
+                        font-size: 16px;   
+                }
+                button{
+                    text-transform: none;
+                }
+            }
+        }
+
+        .contact-social{
+            h4{
+                margin: 0;
+            }
+
+            .social {
+                margin: 0;
+                padding: 0;
+                list-style: none;
+                text-align: center; 
+
+                li {
+                    display: inline-block;
+                    margin: 5px auto; 
+
+                    button .socialicon{
+                        font-size: 12px;
+                        display: block;
+                    }
+                }
+            }
+        }   
+    }
 }
-* {
-  box-sizing: border-box;
+
+@media screen and (min-width: 660px) {
+    
+    .contact{
+        flex-flow: row nowrap;
+        display: flex;
+
+        .contact-form{   
+            .contact-form-container{
+
+                min-width: 300px;
+            }
+        }
+
+        .contact-me{
+            min-width: 232px;
+        }
+    }
 }
-.pseudo-circle, .trigger {
-  width: 56px;
-  height: 56px;
+@media screen and (max-width: 660px) {
+    .contact{
+        flex-flow: row wrap;
+        display: flex;
+  
+        .contact-me{
+            
+            padding: 20px;
+            flex-grow: 1;
+            order:0;
+        }
+
+        .contact-form{
+            .contact-form-container{
+                flex-flow: row nowrap;
+                order: 1;
+                width: 100%;
+            }
+        }
+    }
+}
+
+.contact-fab-anim{
+  position: absolute;
+  width: 64px;
+  bottom: 52px;
+  right: 52px;
+  opacity: 0;
+  
+    transform: translate(50%,50%);
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+  height: 64px;
+  
   border-radius: 50%;
-  position: absolute;
-  right: 100px;
-  bottom: 10px;
-  z-index: 99998;
-  cursor: pointer;
-  transform-origin: 50% 50%; 
+  transition: transform 0.15s cubic-bezier(0.4, 0.0, 1, 1), opacity 0.1s 0.1s, box-shadow 0.3s,
+  bottom 0.3s ease, right 0.3s ease-in-out,  
+  width 0.3s ease 0.3s, height 0.3s ease 0.3s, border-radius  0.3s ease 0.3s;
 }
-.pseudo-circle {
-  opacity: 0;
-  overflow: hidden;
-  transition: transform 0.3s cubic-bezier(0.0, 0.0, 0.2, 1), opacity 0.1s;
+.contact-fab-anim-open{
+    z-index: 2;
+    cursor: pointer;
+    bottom: 50%;
+    right: 50%;
+    transition: opacity 0.1 ease 0.3s;
+    opacity: 1; 
+    width: 3000px;
+    height: 3000px; 
 }
-.trigger {
-  text-align: center;
-  color: #fff;
-  line-height: 56px;
-  background-color: #009688;
-  transition: transform 0.15s cubic-bezier(0.4, 0.0, 1, 1), opacity 0.1s 0.1s, box-shadow 0.3s;
-  opacity: 1;
-  right: 50px;
-  bottom: 50px;
-  position: fixed;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
-  z-index: 99999;
+
+.contact-fab-hide{
+    opacity:0;
 }
-.pseudo-circle.open {
-  transition-delay: .15s;
-  transform: scale(45);
-  opacity: 1;
+
+.contact-message-reply{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity:0;
+    transform: translate(-50%, -50%);
 }
-.trigger.open {
-  transform: translate(-50px, 40px);
-  opacity: 0;
-}
-.trigger.open i {
-  opacity: 0;
-}
-.trigger:hover {
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.12), 0 12px 12px rgba(0, 0, 0, 0.24);
-}
-.dialog {
-  width: 100vw;
-  height: 100vh;
-  background-color: #009688;
-}
-.toolbar {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  overflow: hidden;
-  padding: 20px;
-}
-.toolbar button {
-  position: absolute;
-  z-index: 999999;
-  border: 0;
-  background: transparent;
-  font-size: 16px;
-  text-transform: uppercase;
-  top: 50%;
-  color: #fff;
-  transform: translateY(-50%);
-  padding: 10px 20px;
-  border-radius: 2px;
-  cursor: pointer;
-  transition: all 0.3s;
-  outline: none;
+
+.contact-message-reply-show{
+      opacity: 1;
+      cursor: pointer;
+      z-index: 3;
+      transition: opacity 0.3s 0.3s;
 }
