--- a/src/app/ui/test1/test1.component.scss
+++ b/src/app/ui/test1/test1.component.scss
@@ -4,15 +4,26 @@
   height: 100%;
 
 }
+.fab-anim-container{
+  position: relative;
+}
 
-.fab-anim-area{
+.fab-below-area{
   position: relative;
   width: 100%;
   height: 400px;
+  
+}
+
+.contact-fab-anim-area{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
-.fab{
+.contact-fab{
   position: absolute;
   width: 64px;
   bottom: 52px;
@@ -31,9 +42,37 @@
   
   
 }
-.open{
+
+.contact-fab-anim{
+  position: absolute;
+  width: 64px;
+  bottom: 52px;
+  right: 52px;
+  opacity: 0;
+  
+    transform: translate(50%,50%);
+  background: #d24353;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+  height: 64px;
+  
+  border-radius: 50%;
+  transition: transform 0.15s cubic-bezier(0.4, 0.0, 1, 1), opacity 0.1s 0.1s, box-shadow 0.3s,
+  bottom 0.3s ease, right 0.3s ease-in-out,  
+  width 0.3s ease 0.3s, height 0.3s ease 0.3s, border-radius  0.3s ease 0.3s;
+  
+  
+  
+}
+.contact-fab-anim-open{
   bottom: 50%;
-  right: 50%; 
+  right: 50%;
+  transition: opacity 0.1 ease 0.3s;
+  opacity: 1; 
   width: 3000px;
   height: 3000px; 
   }
+
+  .contact-fab-hide{
+    opacity:0;
+  }
+
